tests/negative/neg_pr1112a_shared_field_mut_actual.safe
package neg_pr1112a_shared_field_mut_actual

   type settings is record
      value : integer

   shared cfg : settings = (value = 1)

   function reset (item : mut integer)
      item = 0

   reset (cfg.value)
